<resources>
    <string name="app_name">GCBPanel</string>

    <!-- Strings related to Settings -->
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>55 minutes</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>45</item>
        <item>55</item>
    </string-array>
    <string name="pref_sync_frequency_default_value">55</string>

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_key_sync_frequency">pref_sync_frequency</string>
    <string name="pref_key_sync_account">pref_sync_account</string>
    <string name="pref_key_sync_calendar">pref_sync_calendar</string>
    <string name="pref_key_sync_now">pref_sync_now</string>
    <string name="error_load_calendars">Can not load calendars for selected account</string>
    <string name="error_missing_play_services">This app requires Google Play Services. Please install Google Play Services on your device and relaunch this app.</string>
    <string name="account_permissions">This app needs to access your Google account.</string>
    <string name="error_zero_calendars">Calendars not found for selected account</string>
    <string name="pref_title_calendar">Synchronized calendar</string>
    <string name="none_selected">None</string>
    <string name="read_calendar_permissions">This app required read calendars permission.</string>
    <string name="refresh">Refresh</string>
    <string name="pref_sync_account">Sync account</string>
    <string name="pref_sync_now">Synchronize now</string>
    <string name="pref_sync_now_error">You must select account and calendar before synchronize.</string>
</resources>
