<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="55"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="@string/pref_key_sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency"/>

    <Preference
        android:key="@string/pref_key_sync_account"
        android:title="Sync account"/>

    <ListPreference
        android:key="@string/pref_key_sync_calendar"
        android:defaultValue="@null"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_calendar"/>
</PreferenceScreen>
